feat(user): add api to create user

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,8 @@ spring:
     baseline-on-migrate: true
     user: postgres
     password: 12345
+  output: # make console more colorful
+    ansi:
+      enabled: ALWAYS
+
+
