--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
 				<configuration>
+					<release>${java.version}</release>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -145,5 +147,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
