feat(user): add hashing password for user accounts

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,5 +22,8 @@ spring:
   output: # make console more colorful
     ansi:
       enabled: ALWAYS
-
+  security:
+    user:
+      name: user
+      password: user
 
