feat(user): add jwt for user login

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,11 @@ spring:
       name: user
       password: user
 
+server:
+  servlet:
+    context-path: /api
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
