--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,17 @@
 		<jjwt.version>0.12.6</jjwt.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.18.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.9</version>
+		</dependency>
 		<!-- Map Struct		-->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
